--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,11 +4,12 @@
     <string name="stock_symbol">(%1$s)</string>
     <string name="stock_change_percentage">(%1$s\%%)</string>
     <string name="stocks_listing_title">The Investors Exchange | IEX</string>
-    <string name="offline_message">Viewing offline data</string>
+    <string name="offline_message">Viewing offline data.</string>
     <string name="title_activity_company_details">CompanyDetailsActivity</string>
     <string name="low_label">Low</string>
     <string name="high_label">High</string>
     <string name="industry_label">Industry:</string>
     <string name="sector_label">Sector:</string>
     <string name="ceo_label">Ceo:</string>
+    <string name="error">Oops! Something went wrong.</string>
 </resources>
